--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="com.arora.comfortsensing.MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg_background"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.arora.comfortsensing.MainActivity"
+    >
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_main"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"/>
+        android:id="@+id/batteryStatus"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:minHeight="170dp"
+        android:minWidth="170dp"
+        android:src="@drawable/img"/>
 
-</android.support.design.widget.CoordinatorLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/signalStrength"
+        android:layout_below="@+id/batteryStatus"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:minHeight="130dp"
+        android:minWidth="130dp"
+        android:src="@drawable/img"
+        android:layout_marginRight="60dp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/personalData"
+        android:layout_below="@+id/signalStrength"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:minHeight="180dp"
+        android:minWidth="180dp"
+        android:src="@drawable/img"
+        android:layout_marginBottom="-20dp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_action_plug"
+        android:id="@+id/batteryLabel"
+        android:layout_alignTop="@+id/batteryStatus"
+        android:layout_alignRight="@+id/signalStrength"
+        android:layout_alignEnd="@+id/signalStrength"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/wifiStrength"
+        android:src="@drawable/ic_action_wifi"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/signalStrength"
+        android:layout_toStartOf="@+id/signalStrength"
+        android:layout_marginRight="50dp"
+        android:paddingBottom="90dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Personal Data"
+        android:layout_alignBottom="@+id/personalData"
+        android:layout_toRightOf="@+id/personalData"
+        android:layout_toEndOf="@+id/personalData"
+        android:layout_marginBottom="48dp"
+        android:textColor="#000000"
+        android:id="@+id/textView2"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="80%"
+        android:id="@+id/nativeBatteryStatus"
+        android:layout_alignBottom="@+id/batteryStatus"
+        android:layout_alignRight="@+id/batteryStatus"
+        android:layout_alignLeft="@+id/batteryStatus"
+        android:layout_alignTop="@+id/batteryStatus"
+        android:gravity="center_horizontal"
+        android:paddingTop="40dp"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        android:textColor="#000000"/>
+
+    <android.support.v4.widget.Space
+        android:layout_marginTop="85dp"
+        android:layout_marginLeft="26dp"
+        android:layout_width="120dp"
+        android:layout_height="2dp"
+        android:background="#c0c0c0"
+        android:layout_alignLeft="@+id/batteryStatus"
+        android:gravity="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="20%"
+        android:id="@+id/calculativeBatteryStatus"
+        android:layout_alignBottom="@+id/batteryStatus"
+        android:layout_alignRight="@+id/batteryStatus"
+        android:layout_alignLeft="@+id/batteryStatus"
+        android:layout_alignTop="@+id/batteryStatus"
+        android:gravity="center_horizontal"
+        android:paddingTop="100dp"
+        android:textStyle="bold"
+        android:textSize="26sp"
+        android:textColor="#000000"/>
+
+
+</RelativeLayout>
