--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,9 @@
         android:layout_toEndOf="@+id/personalData"
         android:layout_marginBottom="48dp"
         android:textColor="#000000"
-        android:id="@+id/textView2"/>
+        android:id="@+id/textView2"
+        android:textSize="16sp"
+        android:textStyle="bold|italic"/>
 
     <TextView
         android:layout_width="wrap_content"
