Refactoring: Tabs, Fragment, PageViewer, Complete Arichitechture changing

--- a/app/src/main/res/drawable/bg_background.xml
+++ b/app/src/main/res/drawable/bg_background.xml
@@ -3,10 +3,10 @@
        android:shape="rectangle">
 
     <gradient
-        android:gradientRadius="400dp"
-        android:startColor="#FFF"
+        android:gradientRadius="10dp"
+        android:startColor="#808080"
         android:endColor="#000"
-        android:type="radial"
+        android:type="linear"
         />
 
 </shape>
