--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
+       android:shape="oval">
 
     <gradient
         android:angle="270"
-        android:startColor="#000000"
-        android:endColor="#514c4c"
+        android:startColor="#009900"
+        android:endColor="#001e00"
         android:type="linear"
         />
 
