--- a/app/src/main/res/layout/fragment_wifi.xml
+++ b/app/src/main/res/layout/fragment_wifi.xml
@@ -3,64 +3,77 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@android:color/black"
               android:orientation="vertical"
-              tools:context="com.arora.comfortsensing.fragment.WifiFragment"
-              android:background="@android:color/black">
+              tools:context="com.arora.comfortsensing.fragment.WifiFragment">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:paddingTop="20dp">
+
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp">
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="center_horizontal"
                     android:text="WIFI IS ON"
                     android:textColor="#FFFFFF"
-                    android:layout_weight="2"
-                    android:gravity="center_horizontal"
                     android:textSize="16sp"/>
+
                 <TextView
+                    android:id="@+id/tv_wifiState"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="1"
-                    android:textColor="#FFFFFF"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
-                    android:textSize="16sp"
-                    android:id="@+id/tv_wifiState"/>
+                    android:text="1"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"/>
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp">
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="WIFI Connected"
-                    android:textColor="#FFFFFF"
                     android:layout_weight="2"
                     android:gravity="center_horizontal"
+                    android:text="WIFI Connected"
+                    android:textColor="#FFFFFF"
                     android:textSize="16sp"/>
+
                 <TextView
+                    android:id="@+id/tv_wifiConnectedTo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="1"
-                    android:textColor="#FFFFFF"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
-                    android:textSize="16sp"
-                    android:id="@+id/tv_wifiConnectedTo"/>
+                    android:text="1"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"/>
             </TableRow>
         </TableLayout>
+
     </ScrollView>
 
+    <ListView
+        android:id="@+id/android:list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+    </ListView>
 
 </LinearLayout>
